--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install curl
+        run: sudo apt-get update && sudo apt-get install -y curl
+        
       - name: Llamar al webhook
         run: |
           Curl -X POST \
