--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,30 +1,24 @@
-# This workflow will upload a Python Package to PyPI when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Upload Python Package
+name: Release Webhook Trigger
 
 on:
   release:
     types: [published]
 
 jobs:
-  release-build:
+  trigger-webhook:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
+      # Paso 1: Instalar curl
       - name: Install curl
         run: sudo apt-get update && sudo apt-get install -y curl
-        
-      - name: Llamar al webhook
+
+      # Paso 2: Ejecutar el script para realizar la solicitud
+      - name: Trigger webhook on release
+        env:
+          SERVER_URL: "http://localhost:3000/github-webhook" # URL de tu servidor Express
         run: |
-          Curl -X POST \
+          curl -X POST \
                -H "Content-Type: application/json" \
                -d '{"action": "published", "repository": {"html_url": "https://github.com/${{ github.repository }}"}, "release": {"tag_name": "${{ github.event.release.tag_name }}"}}' \
-               https://b7ns1ztk-3000.brs.devtunnels.ms/
+               $SERVER_URL
