--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,17 +6,15 @@ on:
 
 jobs:
   trigger-webhook:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
-      # Paso 1: Instalar curl
       - name: Install curl
         run: sudo apt-get update && sudo apt-get install -y curl
 
-      # Paso 2: Ejecutar el script para realizar la solicitud
-      - name: Trigger webhook on release
+      - name: Activar webhook
         env:
-          SERVER_URL: "http://localhost:3000/github-webhook" # URL de tu servidor Express
+          SERVER_URL: "http://localhost:3000/github-webhook"
         run: |
           curl -X POST \
                -H "Content-Type: application/json" \
