--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: self-hosted
 
     steps:
-      - name: Install curl
+      - name: Instalar curl
         run: sudo apt-get update && sudo apt-get install -y curl
 
       - name: Activar webhook
