--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Descargar release
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
           SERVER_URL: "http://localhost:3000/release-to-express"
         run: |
           # Obtener el ID del release
@@ -20,7 +20,7 @@ jobs:
 
           # Configurar encabezados para la autenticación
           $headers = @{
-            Authorization = "Bearer $env:GITHUB_TOKEN"
+            Authorization = "Bearer $env:TOKEN"
             Accept        = "application/vnd.github.v3+json"
           }
 
