--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,7 +29,7 @@ jobs:
           $assets = Invoke-RestMethod -Uri $assets_url -Headers $headers -Method Get
 
           # Filtrar los archivos .hex
-          $hexFiles = $assets | Where-Object { $_.name -like "*.text" }
+          $hexFiles = $assets | Where-Object { $_.name -like "*.txt" }
           if (-not $hexFiles) {
               Write-Host "No se encontraron archivos .hex. Finalizando."
               exit 0
