--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,7 +18,6 @@ jobs:
           $release_id = ${{ github.event.release.id }}
           $assets_url = "https://api.github.com/repos/${{ github.repository }}/releases/$release_id/assets"
 
-          # Configurar encabezados para la autenticación
           $headers = @{
             Authorization = "Bearer $env:GITHUB_TOKEN"
             Accept        = "application/vnd.github.v3+json"
@@ -28,7 +27,7 @@ jobs:
           Write-Host "Obteniendo los Assets del release desde: $assets_url"
           $assets = Invoke-RestMethod -Uri $assets_url -Headers $headers -Method Get
 
-          # Filtrar los archivos .hex
+          # Filtrar los archivos .txt
           $hexFiles = $assets | Where-Object { $_.name -like "*.txt" }
           if (-not $hexFiles) {
               Write-Host "No se encontraron archivos .hex. Finalizando."
@@ -38,3 +37,7 @@ jobs:
               Write-Host "Procesando archivo: $($file.name)"
               $download_url = $file.browser_download_url
           }
+          $body = @{
+              urls = $downloadUrls
+          }
+          Invoke-RestMethod -Uri SERVER_URL -Method Post ($body | ConvertTo-Json -Depth 10) -ContentType "application/json"
