--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -40,4 +40,4 @@ jobs:
           $body = @{
               urls = $downloadUrls
           }
-          Invoke-RestMethod -Uri SERVER_URL -Method Post ($body | ConvertTo-Json -Depth 10) -ContentType "application/json"
+          Invoke-RestMethod -Uri $env:SERVER_URL -Method Post ($body | ConvertTo-Json -Depth 10) -ContentType "application/json"
