--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,6 +17,7 @@ jobs:
           # Obtener el ID del release
           $release_id = ${{ github.event.release.id }}
           $assets_url = "https://api.github.com/repos/${{ github.repository }}/releases/$release_id/assets"
+          
 
           $headers = @{
             Authorization = "Bearer $env:GITHUB_TOKEN"
@@ -38,5 +39,6 @@ jobs:
           $body = @{
               nombre = "${{ github.event.release.name }}"
               urls = $downloadUrls
+              repository = @{ html_url = "https://github.com/${{ github.repository }}" }
           }
           Invoke-RestMethod -Uri $env:SERVER_URL -Method Post -Body ($body | ConvertTo-Json -Depth 10) -ContentType "application/json"
